<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="title_welcome_page">Welcome to Story App!</string>
    <string name="message_welcome_page">Let\'s upload your activities on Story App!</string>
    <string name="copyright">© 2023 Mochammad Adhi Buchori</string>
    <string name="title_signup_page">Please complete your information below!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Can\'t wait to share your activities?</string>
    <string name="message_login_page">Before that, please enter your data first!</string>
    <string name="message_main_page">Share your activities on Story App!</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="email_invalid">Invalid email address</string>
    <string name="password_invalid">Password must be at least 8 characters long</string>
    <string name="register_invalid">Invalid email or password</string>
    <string name="logout_error">Failed to Logout</string>
    <string name="language">Language</string>
    <string name="story_description">Story Description</string>
    <string name="detail_story">Story Details</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="addStory">Add Story</string>
    <string name="allow_permission">Please allow camera access in settings</string>
    <string name="story_invalid">Story or description cannot be blank</string>
    <string name="appwidget_text">Story</string>
    <string name="empty_text">No Data</string>
    <string name="retry">Retry</string>
    <string name="story_location">Story Location</string>
    <string name="upload_current_location">Upload Current Location?</string>
    <string name="location_error">Location Error</string>
    <string name="location_permission_error">Location Permission Error</string>
    <string name="login_success">Login Success</string>
    <string name="login_wrong">Login Wrong</string>
</resources>